docs/reports/map_example_tol.log
Traceback (most recent call last):
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\Koen.Reef\Miniconda3\envs\DHYDROLIB\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# set paths
input_file_path = currentdir + r"/HydroLogic_Inundation_toolbox/Data/Tol/input/1PT10_map.nc"
output_file_path = currentdir + r"/HydroLogic_Inundation_toolbox/Data/Tol/output/final_waterdepth.tiff"
Path(currentdir + r"/HydroLogic_Inundation_toolbox/Data/Tol/output).mkdir(exist_ok=True)
------------------

[1;36m  Input [1;32mIn [2][1;36m[0m
[1;33m    Path(currentdir + r"/HydroLogic_Inundation_toolbox/Data/Tol/output).mkdir(exist_ok=True)[0m
[1;37m                      ^[0m
[1;31mSyntaxError[0m[1;31m:[0m unterminated string literal (detected at line 4)

SyntaxError: unterminated string literal (detected at line 4) (1143388747.py, line 4)

